--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "chart.js": "^2.7.3",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1"
   },
