--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build --mode production",
+    "watch": "vue-cli-service build --watch --mode development"
   },
   "dependencies": {
     "chart.js": "^2.7.3",
